[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resorter-py"
version = "0.1.0"
description = "A Python implementation of Gwern's resorter for ranking items through enhanced pairwise comparison functionality"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Justin Malloy"}
]
urls = {Homepage = "https://github.com/brickfrog/resorter.py"}
dependencies = [
    "click>=8.1.8",
    "numpy>=1.24.0",
    "pandas>=2.2.0",
]

[project.scripts]
resorter = "resorter_py.main:main"

[tool.setuptools.packages.find]
include = ["resorter_py*"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
