[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "resorter-py"
version = "0.1.0"
description = "A Python implementation of Gwern's resorter for ranking items through enhanced pairwise comparison functionality"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    {name = "Justin Malloy"}
]
urls = {Homepage = "https://github.com/brickfrog/resorter.py"}
dependencies = [
    "click>=8.3.1",
    "numpy>=2.4.0",
    "scipy>=1.16.3",
]

[project.optional-dependencies]
pandas = [
    "pandas>=2.3.3",
]

[project.scripts]
resorter = "resorter_py.cli:main"

[tool.setuptools.packages.find]
include = ["resorter_py*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
